# Project-Samanvay-A-true-Hybrid-HTAP-Database

./: .clangd  .gitignore  CMakeLists.txt  README.md  VALIDATION_GUIDE.md  demo_seed.sh  test_almost
.github/workflows/: main.yml  validate.yml
StorageEngine/: stress_test  test_htap  test_skiplist
StorageEngine/API/: api_server.hpp  bulk_loader.cpp  json_helpers.hpp  main.cpp
StorageEngine/SQLLayer/: query_executor.cpp  sql_shell.cpp
StorageEngine/SQLLayer/includes/: query_executor.hpp  result_formatter.hpp  row_codec.hpp  schema_registry.hpp
StorageEngine/SQLLayer/tests/: Unit_Test2.cpp  test_phase1.cpp
StorageEngine/includes/: columnar_file.hpp  columnar_format.hpp  compaction.hpp  grpc_service.hpp  hybrid_query_router.hpp  lsm_levels.hpp  memtable.hpp  range_query_executor.hpp  skiplist.hpp  sstable.hpp  status.hpp  storage_engine.hpp  wal.hpp
StorageEngine/proto/: storage_service.proto
StorageEngine/src/: memTable.cpp  skiplist.cpp
StorageEngine/test/: benchmark_htap.cpp  mt_benchmark_htap.cpp  simple.cpp  stress_skiplist.cpp  stress_test_benchmark.cpp  test_almost.cpp  test_htap_features.cpp  test_skiplist.cpp
api_data/: schema_registry.sdb
dashboard/: app.js  index.html  server.py  styles.css
data/: schema_registry.sdb
docs/: CODD_REQUIRED_RULES_EVALUATION.md  WHITEPAPER.md  index.html  script.js  styles.css
sql-console/: index.html  package-lock.json  package.json
sql-console/src/: App.css  App.jsx  api.js  index.css
